# dnd-ontology

./: .gitignore  LICENSE  README.md  dashboard.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
data/: homebrew-text.md  lore.yaml
src/dndonto/: ask.py  check_env.py  config.py  ingest.py  ontology.py  pipeline.py  query.py  reason.py  visualize.py
tests/: test_ingest.py
