[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dnd-ontology"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["owlready2==0.5", "rdflib", "pyyaml"]

[project.scripts]
dndonto-pipeline = "dndonto.pipeline:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]